# enterprise-ai-engineering

./: .gitignore  README.md
.github/workflows/: 01-svc-hello.yml  02-svc-catalog.yml  03-svc-jobs.yml  ci.yml
projects/01-svc-hello-rebuild/: .dockerignore
projects/01-svc-hello-rebuild/app/: main.py  schemas.py
projects/01-svc-hello-rebuild/app/api/: routes.py
projects/01-svc-hello-rebuild/app/core/: config.py  errors.py  middleware.py
projects/01-svc-hello-rebuild/tests/: test_app.py
projects/02-svc-catalog-rebuild/: README.md  pyproject.toml  requirements.txt  svc_catalog.db  test_svc_catalog.db
projects/02-svc-catalog-rebuild/.github/workflows/: ci.yml
projects/02-svc-catalog-rebuild/app/: database.py  main.py  models.py  security.py
projects/02-svc-catalog-rebuild/app/routers/: reports.py
projects/02-svc-catalog-rebuild/tests/: test_reports.py
projects/03-svc-jobs-rebuild/: .dockerignore  Dockerfile  README.md  jobs.db  pyproject.toml  requirements.txt
projects/03-svc-jobs-rebuild/app/: main.py  schemas.py
projects/03-svc-jobs-rebuild/app/api/: routes.py
projects/03-svc-jobs-rebuild/app/core/: config.py  errors.py  middleware.py
projects/03-svc-jobs-rebuild/app/db/: models.py  session.py
projects/03-svc-jobs-rebuild/app/services/: jobs.py
projects/03-svc-jobs-rebuild/app/shared/: auth.py
projects/03-svc-jobs-rebuild/tests/: test_app.py
