[project]
name = "svc-catalog"
version = "0.1.0"
description = "Autherticated CRUD service for report metadata catalog"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "python-multipart",
    "sqlmodel",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
]
